--- a/index.css
+++ b/index.css
@@ -1,14 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 
+:root {
+    --bold-green: #23453ec7;
+    --darkBlue: #507585;
+    --green: #497375;
+    --narrowblue: #3c555f;
+    --orange: #ea6341;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-#logo-img {
-    margin: 10px 20px;
-    width: 20%;
+#logo .logo-img:nth-child(1) {
+    position: relative;
+    padding: 30px;
+    background-color: var(--narrowblue);
+}
+
+div#logo {
+    margin: 0px 15px;
+}
+
+#logo .logo-img:nth-child(2) {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    padding: 25px;
+    background-color: var(--darkBlue);
 }
 
 #navbar {
@@ -17,8 +39,8 @@
 }
 
 #img-home {
-    width: 104rem;
-    height: 38rem;
+    width: 100vw;
+    height: 100vh;
 }
 
 #logo-name {
@@ -26,6 +48,7 @@
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
     color: #d06444;
+    font-size: 2rem;
 }
 
 #logo-name span {
@@ -34,17 +57,27 @@
 
 #navbar-layout {
     text-align: center;
-    max-width: 38%;
-    padding: 10% 8%;
+    max-width: 15rem;
+    padding: 6rem 1rem;
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
-    background-color: rgba(73, 115, 117, 0.789);
+    background-color: var(--bold-green);
 }
 
 #navbar-layout h2 {
     color: white;
     font-weight: 800;
 }
+
+
+
+
+
+
+
+
+
+
 
 .card-text {
     text-align: justify;
@@ -75,6 +108,7 @@
 .block-1:nth-child(3) {
     background-color: #d3d3cf;
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .block-1:nth-child(3) .sub-block a {
@@ -83,49 +117,128 @@
     color: #497375;
 }
 
+
+
+
+
+
+
+
+
 footer {
     padding: 10px;
     background-color: #d06444;
 }
 
-@media screen and (min-width:768px) {
-    #main-section {
-        margin: 0px 00px;
+@media screen and (min-width: 1700px) {
+    #img-home {
+        width: 100vw;
+        height: 20vh;
     }
+}
 
+@media screen and (max-width: 2200px) {
+
+    #img-home {
+        height: 100vh ;
+    }
+}
+
+@media screen and (max-width: 1200px) {
     #navbar-layout {
-        max-width: 50%;
-        padding: 10% 0%;
+        max-width: 45%;
     }
 
+    #card {
+        flex-wrap: wrap;
+    }
+
+    #navbar {
+        max-height: 7rem;
+    }
+
+
+    #img-home {
+        height: 100vh;
+    }
+
+    .block-1 {
+        padding: 15px 22px;
+        margin: 0px 30px;
+    }
 }
-
-@media screen and (min-width:992px) {
-    #main-section {
-        margin: 0px 100px;
-    }
-    
+@media screen and (max-width: 992px) {
     #navbar-layout {
-        max-width: 30%;
-        padding: 10% 0%;
+        max-width: 80%;
+    }
+
+    #card {
+        flex-wrap: wrap;
+    }
+
+    #navbar {
+        max-height: 9rem;
+    }
+
+
+    #img-home {
+        height: 100vh;
+    }
+
+    .block-1 {
+        padding: 15px 22px;
+        margin: 0px 30px;
     }
 }
 
-@media screen and (min-width:1200px) {
-    #main-section {
-        margin: 0px 100px;
+@media screen and (max-width: 786px) {
+    #navbar-layout {
+        max-width: 100%;
+    }
+
+    #card {
+        flex-wrap: wrap;
+    }
+
+    #navbar {
+        max-height: 23rem;
+    }
+
+
+    #img-home {
+        height: 100vh;
+    }
+
+    .block-1 {
+        padding: 15px 22px;
+        margin: 0px 30px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    #navbar-layout {
+        max-width: 100%;
+        padding: 2rem;
+    }
+
+    #card {
+        flex-wrap: wrap;
+    }
+
+    #navbar {
+        max-height: 15rem;
+        
+    }
+
+
+    #img-home {
+        height: 47vh;
+    }
+
+    .block-1 {
+        padding: 15px 22px;
+        margin: 0px 30px;
     }
 }
 
 
-@media screen and (min-width:2200px) {
-    #main-section {
-        margin: 0px 500px;
-    }
-}
-
-@media screen and (min-width:3000px) {
-    #main-section {
-        margin: 0px 850px;
-    }
-}
